# geneprint

./: .gitignore  CNAME  README.md  package-lock.json  package.json  spec.md  svelte.config.js
.github/workflows/: deploy.yml
src/: app.html
src/lib/components/: HelixCanvas.svelte
src/lib/wasm/: geneprint_wasm.d.ts  geneprint_wasm.js  geneprint_wasm_bg.wasm  geneprint_wasm_bg.wasm.d.ts  package.json
src/routes/: +page.svelte  layout.css
static/: CNAME  manifest.json
wasm/: Cargo.toml
wasm/src/: lib.rs
