[package]
name = "geneprint-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# For deterministic PRNG, we can use a simple Mulberry32 or similar in Rust.
# But for now, let's add these for potential use.
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
